--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -94,9 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "\n",
@@ -105,9 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the keys\n",
     "\n",
@@ -123,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 equals 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -176,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If 5 machines take 5 minutes to make 5 widgets, how long would 100 machines take to make 100 widgets?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
@@ -206,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +251,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's analyze the problem step-by-step:\n",
+      "\n",
+      "- **Given:**  \n",
+      "  5 machines take 5 minutes to make 5 widgets.\n",
+      "\n",
+      "- **Find:**  \n",
+      "  How long would 100 machines take to make 100 widgets?\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 1: Find the rate of work per machine.\n",
+      "\n",
+      "Since 5 machines make 5 widgets in 5 minutes, the rate of 5 machines is:\n",
+      "\n",
+      "\\[\n",
+      "\\text{Rate of 5 machines} = \\frac{5 \\text{ widgets}}{5 \\text{ minutes}} = 1 \\text{ widget per minute}\n",
+      "\\]\n",
+      "\n",
+      "Therefore, each machine makes:\n",
+      "\n",
+      "\\[\n",
+      "\\frac{1 \\text{ widget per minute}}{5 \\text{ machines}} = \\frac{1}{5} \\text{ widget per minute per machine}\n",
+      "\\]\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 2: Calculate how long 100 machines take to make 100 widgets.\n",
+      "\n",
+      "The combined rate of 100 machines is:\n",
+      "\n",
+      "\\[\n",
+      "100 \\times \\frac{1}{5} = 20 \\text{ widgets per minute}\n",
+      "\\]\n",
+      "\n",
+      "If 100 machines can make 20 widgets per minute, then to make 100 widgets:\n",
+      "\n",
+      "\\[\n",
+      "\\frac{100 \\text{ widgets}}{20 \\text{ widgets per minute}} = 5 \\text{ minutes}\n",
+      "\\]\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### **Answer:**\n",
+      "\n",
+      "It would take **5 minutes** for 100 machines to make 100 widgets.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
@@ -233,9 +320,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's analyze the problem step-by-step:\n",
+       "\n",
+       "- **Given:**  \n",
+       "  5 machines take 5 minutes to make 5 widgets.\n",
+       "\n",
+       "- **Find:**  \n",
+       "  How long would 100 machines take to make 100 widgets?\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 1: Find the rate of work per machine.\n",
+       "\n",
+       "Since 5 machines make 5 widgets in 5 minutes, the rate of 5 machines is:\n",
+       "\n",
+       "\\[\n",
+       "\\text{Rate of 5 machines} = \\frac{5 \\text{ widgets}}{5 \\text{ minutes}} = 1 \\text{ widget per minute}\n",
+       "\\]\n",
+       "\n",
+       "Therefore, each machine makes:\n",
+       "\n",
+       "\\[\n",
+       "\\frac{1 \\text{ widget per minute}}{5 \\text{ machines}} = \\frac{1}{5} \\text{ widget per minute per machine}\n",
+       "\\]\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 2: Calculate how long 100 machines take to make 100 widgets.\n",
+       "\n",
+       "The combined rate of 100 machines is:\n",
+       "\n",
+       "\\[\n",
+       "100 \\times \\frac{1}{5} = 20 \\text{ widgets per minute}\n",
+       "\\]\n",
+       "\n",
+       "If 100 machines can make 20 widgets per minute, then to make 100 widgets:\n",
+       "\n",
+       "\\[\n",
+       "\\frac{100 \\text{ widgets}}{20 \\text{ widgets per minute}} = 5 \\text{ minutes}\n",
+       "\\]\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### **Answer:**\n",
+       "\n",
+       "It would take **5 minutes** for 100 machines to make 100 widgets."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -277,23 +421,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sure! What factors do you consider most important when choosing a credit card in India?\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "When choosing a credit card in India, several factors are crucial to ensure you select one that best suits your financial needs and lifestyle. Here are the most important considerations:\n",
+       "\n",
+       "1. **Purpose of the Card:**  \n",
+       "   - Identify why you need the card—whether for cashback, rewards, travel benefits, fuel surcharge waiver, or building credit history.\n",
+       "\n",
+       "2. **Annual Fees and Joining Fees:**  \n",
+       "   - Many credit cards come with annual or joining fees. Evaluate if the benefits outweigh these costs, or if you can find a no-annual-fee option that meets your needs.\n",
+       "\n",
+       "3. **Interest Rates (APR):**  \n",
+       "   - Compare the interest rates charged on outstanding balances. If you plan to carry a balance, a card with a lower interest rate is preferable.\n",
+       "\n",
+       "4. **Rewards and Cashback Offers:**  \n",
+       "   - Look for cards that offer rewards, points, or cashback that align with your spending patterns (e.g., groceries, dining, travel).\n",
+       "\n",
+       "5. **Welcome Bonuses and Introductory Offers:**  \n",
+       "   - Some cards provide sign-up bonuses, enhanced reward rates for initial months, or 0% interest on balance transfer—these can add value.\n",
+       "\n",
+       "6. **Credit Limit:**  \n",
+       "   - The credit limit should be adequate for your spending needs without encouraging overspending.\n",
+       "\n",
+       "7. **Additional Benefits and Perks:**  \n",
+       "   - Benefits such as airport lounge access, fuel surcharge waiver, concierge services, travel insurance, and discount offers can enhance value.\n",
+       "\n",
+       "8. **Network Acceptance:**  \n",
+       "   - Ensure the card is widely accepted—Visa, Mastercard, or American Express—depending on your usage.\n",
+       "\n",
+       "9. **Customer Service and Security:**  \n",
+       "   - Reliable customer service and fraud protection measures are essential.\n",
+       "\n",
+       "10. **Eligibility and Documentation:**  \n",
+       "    - Check if you meet eligibility criteria (income, age, credit score) and the documentation required for application.\n",
+       "\n",
+       "11. **Balance Transfer Options:**  \n",
+       "    - Availability of balance transfer with low or zero interest can be helpful in managing existing debt.\n",
+       "\n",
+       "Considering these factors will help you pick a credit card that maximizes benefits while minimizing costs and suits your financial habits."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# First create the messages:\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Ask me a question regarding credit cards in India.\"}]\n",
     "\n",
     "# Then make the first call:\n",
     "\n",
-    "response =\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "answer = response.choices[0].message.content\n",
+    "print(answer)\n",
+    "\n",
+    "\n",
     "\n",
     "# Then read the business idea:\n",
     "\n",
-    "business_idea = response.\n",
+    "business_idea = answer\n",
     "\n",
-    "# And repeat!"
+    "messages = [{\"role\": \"user\", \"content\": answer}]\n",
+    "\n",
+    "# And repeat!\n",
+    "\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "answer = response.choices[0].message.content\n",
+    "display(Markdown(answer))"
    ]
   },
   {
@@ -318,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
